--- a/labengsoft/mainapp/templates/mainapp/destinatario_list.html
+++ b/labengsoft/mainapp/templates/mainapp/destinatario_list.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'mainapp/base.html' %}
 {% block content %}
     <h2>Enderecos</h2>
     <div class="list-group">
         {% for endereco in object_list %}
-            <a href="#" class="list-group-item list-group-item-action">
+            <a href= {% url 'enderecos-detail' endereco.id %} class="list-group-item list-group-item-action">
                 {{ endereco.logradouro }},&nbsp;
                 {{ endereco.numero }},&nbsp;
                 {% if endereco.complemento %}
