--- a/labengsoft/mainapp/templates/mainapp/destinatario_list.html
+++ b/labengsoft/mainapp/templates/mainapp/destinatario_list.html
@@ -1,17 +1,10 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
-    <h2>Enderecos</h2>
+    <h2>Destinatários</h2>
     <div class="list-group">
-        {% for endereco in object_list %}
-            <a href= {% url 'enderecos-detail' endereco.id %} class="list-group-item list-group-item-action">
-                {{ endereco.logradouro }},&nbsp;
-                {{ endereco.numero }},&nbsp;
-                {% if endereco.complemento %}
-                    {{ endereco.complemento }},&nbsp;
-                {% endif %}
-                {{ endereco.bairro }},&nbsp;
-                {{ endereco.cidade }},&nbsp;
-                {{ endereco.uf }},&nbsp;
+        {% for dest in object_list %}
+            <a href= {% url 'destinatarios-detail' dest.id %} class="list-group-item list-group-item-action">
+                {{ dest }}
             </a>
         {% endfor %}
     </div>
