Commit final do trabalho

--- a/mainapp/templates/mainapp/destinatario_detail.html
+++ b/mainapp/templates/mainapp/destinatario_detail.html
@@ -5,7 +5,9 @@
     <br/>
     Nome:&nbsp;{{ destinatario.nome }}<br/>
     CPF/CNPJ:&nbsp;{{ destinatario.cpfCnpj }}<br/>
-    Telefones:&nbsp;{{ destinatario.telefones }}<br/>
+    Telefone:&nbsp;{{ destinatario.telefone }}<br/>
+    Celular:&nbsp;{{ destinatario.celular }}<br/>
+    Fax:&nbsp;{{ destinatario.fax }}<br/>
     E-mail:&nbsp;{{ destinatario.email }}<br/>
 {% endblock %}
     
