--- a/mainapp/templates/mainapp/main.html
+++ b/mainapp/templates/mainapp/main.html
@@ -4,7 +4,6 @@
        <script type="text/javascript" src={% static 'js/jquery-3.3.1.min.js' %}></script>
        <script type="text/javascript" src={% static 'js/popper.js' %}></script>
        <script type="text/javascript" src={% static 'js/bootstrap.min.js' %}></script>
-       <script type="text/javascript" src={% static 'js/jquery.bootstrap.modal.forms.js' %}></script>
        <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}/>
        <link rel="stylesheet" href={% static 'css/bootstrap-grid.css' %}/>
    </head>
@@ -19,12 +18,12 @@
            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                <ul class="navbar-nav mr-auto">
                    <li class="nav-item active">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastros</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                            <a class="dropdown-item" href="#">Remetentes</a>
-                           <a class="dropdown-item" href="#">Destinatários</a>
-                           <a class="dropdown-item" href="#">Grupo de destinatários</a>
-                           <a class="dropdown-item" href="#">Embalagem</a>
+                           <a class="dropdown-item" href={% url 'destinatarios-main' %}>Destinatários</a>
+                           <a class="dropdown-item" href={% url 'grupodest-main' %}>Grupo de destinatários</a>
+                           <a class="dropdown-item" href="#"}>Embalagem</a>
                        </div>
                    </li>
                    <li class="nav-item">
